# CryptoTradingExchange

./: .gitignore  CMakeLists.txt  CSVReader.cpp  CSVReader.h  FinancialFunctions.cpp  FinancialFunctions.h  MenuFunctions.cpp  MenuFunctions.h  MerkelMain.MenuFunctions.cpp  MerkelMain.cpp  MerkelMain.h  MerkelMain::MenuFunctions.cpp  OrderBook.cpp  OrderBook.csv  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  Wallet.cpp  Wallet.h  ioOperations.cpp  main.cpp  menuFunctions.cpp
